fixed small issues in css - changed the form margins so that it won't touch the navbar in small devices as well - changed the z-index of sidenav otherwise background content is overlaping on the navbar

--- a/src/app/components/auth-forms.css
+++ b/src/app/components/auth-forms.css
@@ -5,7 +5,7 @@
 .form-wrapper form {
   width: 90%;
   max-width: 500px;
-  margin: auto;
+  margin:2rem auto;
   padding: 2rem;
 }
 
